@@ -28,6 +28,13 @@ static void EIP_verbosityCall(const iocshArgBuf * args) {
 	EIP_verbosity = args[0].ival;
 }
 
+static const iocshArg EIP_timeoutArg0 = {"value", iocshArgInt};
+static const iocshArg *const EIP_timeoutArgs[1] = {&EIP_timeoutArg0};
+static const iocshFuncDef EIP_timeoutDef = {"EIP_timeout", 1, EIP_timeoutArgs};
+static void EIP_timeoutCall(const iocshArgBuf * args) {
+	EIP_TIMEOUT = args[0].ival;
+}
+
 static const iocshArg EIP_buffer_limitArg0 = {"bytes", iocshArgInt};
 static const iocshArg *const EIP_buffer_limitArgs[1] = {&EIP_buffer_limitArg0};
 static const iocshFuncDef EIP_buffer_limitDef = {"EIP_buffer_limit", 1, EIP_buffer_limitArgs};
@@ -103,6 +110,7 @@ static void drvEtherIP_read_tagCall(const iocshArgBuf * args) {
 void drvEtherIP_Register() {
 	iocshRegister(&drvEtherIP_default_rateDef, drvEtherIP_default_rateCall);
 	iocshRegister(&EIP_verbosityDef        , EIP_verbosityCall);
+	iocshRegister(&EIP_timeoutDef          , EIP_timeoutCall);
 	iocshRegister(&EIP_buffer_limitDef     , EIP_buffer_limitCall);
 	iocshRegister(&drvEtherIP_helpDef      , drvEtherIP_helpCall);
 	iocshRegister(&drvEtherIP_initDef      , drvEtherIP_initCall);
